# env_encryption_tool

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  privacy-policy.md  terms-of-service.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cross_platform.yml  defender-for-devops.yml  dependabot-auto-merge.yml  greetings.yml  miri.yml  osv-scanner.yml  rust-clippy.yml  rust.yml  scorecard.yml  security.yml  stale.yml
src/: decrypt_config.rs  decrypt_envs.rs  encrypt_envs.rs  lib.rs  main.rs
tests/: encryption_tests.rs
