[package]
name = "env_encryption_tool"
version = "0.9.11"
edition = "2024"

[[bin]]
name = "env_encryption_tool"
path = "src/main.rs" 

[dependencies]
rand_core = { version = "0.9.3", features = ["os_rng"] } # Random number generators and other randomness functionality. 
argon2 = "0.5.3"                                         # Key derivation with resistance to GPU cracking and side-channel attacks
log = "0.4.28"                                           # A lightweight logging facade for Rust 
pqcrypto = "0.18.1"                                      # Post-Quantum crypto algorithm suite - MLKEM, MLDSA, falcon, sphincs, Kyber, Dilithium
pqcrypto-traits = "0.3.5"                                # Shared traits for post-quantum cryptographic primitives
env = "1.0.1"                                            # Provides a safe interface for std::env::{set_var, remove_var}.
once_cell = "1.21.3"                                     # Single assignment cells and lazy values.
tokio = { version = "1.48.0", features = ["full"] }      # Fast, async I/O

[package.metadata.audit]
ignore = ["RUSTSEC-2024-0436"]
