[package]
name = "env_encryption_tool"
version = "0.9.17"
edition = "2024"
authors = [
    "The Butler Group LLC <dev@butlergroup.net>",
]
categories = [
    "development-tools", "command-line-utilities", "cryptography", "security"
]
description = "Rust-based .env (dotenv) file encryption & decryption tool - store & retrieve your app environment variables safely 😎 now Post-Quantum-safe!"
documentation = "https://docs.rs/env_encryption_tool"
keywords = ["env", "encryption", "tool", "security", "cryptography"]
license = "AGPL-3.0-only"
repository = "https://github.com/butlergroup/env_encryption_tool"

[[bin]]
name = "env_encryption_tool"
path = "src/main.rs" 

[dependencies]
rand = "0.10.0"                                                    # Random number generators and other randomness functionality. 
argon2 = "0.5.3"                                                   # Key derivation with resistance to GPU cracking and side-channel attacks
log = "0.4.29"                                                     # A lightweight logging facade for Rust 
pqcrypto = { git = "https://github.com/butlergroup/pqcrypto.git" } # Post-Quantum cryptographic primitives; forked to resolve RUSTSEC-2024-0436 with the paste crate
pqcrypto-traits = "0.3.5"                                          # Shared traits for post-quantum cryptographic primitives
env = "1.0.1"                                                      # Provides a safe interface for std::env::{set_var, remove_var}.
once_cell = "1.21.4"                                               # Single assignment cells and lazy values.
tokio = { version = "1.50.0", features = ["full"] }                # Fast, async I/O
chacha20poly1305 = "0.10.1"                                        # Pure Rust implementation of the ChaCha20Poly1305 Authenticated Encryption with Additional Data Cipher (RFC 8439) with optional architecture-specific hardware acceleration
hkdf = "0.12.4"                                                    # HMAC-based Extract-and-Expand Key Derivation Function (HKDF)
sha2 = "0.10.9"                                                    # Pure Rust implementation of the SHA-2 hash function family including SHA-224, SHA-256, SHA-384, and SHA-512. 
zeroize = "1.8.2"                                                  # Securely clear secrets from memory with a simple trait built on stable Rust primitives which guarantee memory is zeroed using an operation will not be 'optimized away' by the compiler.

[patch.crates-io]
bytes = { git = 'https://github.com/tokio-rs/bytes.git' }          # added to resolve CVE-2026-25541
pqcrypto-traits = { git = "https://github.com/butlergroup/pqcrypto.git" } # added to resolve dependency conflicts 